update api interaction per 1k fans, distribution of post type
